--- a/deck.mdx
+++ b/deck.mdx
@@ -7,145 +7,148 @@ import { github, vsDark } from "@code-surfer/themes";
 
 export const theme = vsDark;
 
-# Hello 👋
-
-You are using [MDX Deck](https://github.com/jxnblk/mdx-deck) and [Code Surfer](https://codesurfer.pomb.us)
+# Welcome to the MckGeewells Quarantine Quiz 👋
 
 ---
 
 <CodeSurfer>
 
-```js title="This is a title" subtitle="and this a subtitle"
-function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null ? 0 : ipsum.sit;
-  dolor = sit - amet(dolor);
-  return sit
-    ? consectetur(ipsum, 0, dolor < 0 ? 0 : dolor)
-    : [];
-}
-
-function incididunt(ipsum, ut = 1) {
-  ut = labore.et(amet(ut), 0);
-  const sit = ipsum == null ? 0 : ipsum.sit;
-
-  if (!sit || ut < 1) {
-    return [];
-  }
-
-  let dolore = 0;
-  let magna = 0;
-  const aliqua = new eiusmod(labore.ut(sit / ut));
-
-  while (dolore < sit) {
-    aliqua[magna++] = consectetur(
-      ipsum,
-      dolore,
-      (dolore += ut)
-    );
-  }
-
-  return aliqua;
-}
+```js title="Round One" subtitle="General Knowledge" js 1:1
+1) What does BMW stand for (in English)?
 ```
 
-```js
-function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null ? 0 : ipsum.sit;
-  dolor = sit - amet(dolor);
-  return sit
-    ? consectetur(ipsum, 0, dolor < 0 ? 0 : dolor)
-    : [];
-}
-
-function adipiscing(...elit) {
-  if (!elit.sit) {
-    return [];
-  }
-
-  const sed = elit[0];
-  return eiusmod.tempor(sed) ? sed : [sed];
-}
-
-function incididunt(ipsum, ut = 1) {
-  ut = labore.et(amet(ut), 0);
-  const sit = ipsum == null ? 0 : ipsum.sit;
-
-  if (!sit || ut < 1) {
-    return [];
-  }
-
-  let dolore = 0;
-  let magna = 0;
-  const aliqua = new eiusmod(labore.ut(sit / ut));
-
-  while (dolore < sit) {
-    aliqua[magna++] = consectetur(
-      ipsum,
-      dolore,
-      (dolore += ut)
-    );
-  }
-
-  return aliqua;
-}
+```js title="Round One" subtitle="General Knowledge" js 2:2
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
 ```
 
-```diff 1[10:14],2[15:19],3[22:27],10:12
+```js title="Round One" subtitle="General Knowledge" js 3:3
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
+3) How many kings of England have been called Philip?
+```
 
+```js title="Round One" subtitle="General Knowledge" js 4:4
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
+3) How many kings of England have been called Philip?
+4) What year was the first ever iPhone released?
+```
+
+```js title="Round One" subtitle="General Knowledge" js 5:5
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
+3) How many kings of England have been called Philip?
+4) What year was the first ever iPhone released?
+5) Where is the worlds most populated country?
+
+```
+
+```js title="Round One" subtitle="General Knowledge" js 6:6
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
+3) How many kings of England have been called Philip?
+4) What year was the first ever iPhone released?
+5) Where is the worlds most populated country?
+6) True or false - there are more bacteria cells in the your body that human cells?
+```
+
+```js title="Round One" subtitle="General Knowledge" js 7:7
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
+3) How many kings of England have been called Philip?
+4) What year was the first ever iPhone released?
+5) Where is the worlds most populated country?
+6) True or false - there are more bacteria cells in the your body that human cells?
+7) What name is the rapper Sean Combs known by?
+```
+
+```js title="Round One" subtitle="General Knowledge" js 8:8
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
+3) How many kings of England have been called Philip?
+4) What year was the first ever iPhone released?
+5) Where is the worlds most populated country?
+6) True or false - there are more bacteria cells in the your body that human cells?
+7) What name is the rapper Sean Combs known by?
+8) In what year was the first episode of South Park aired?
+```
+
+```js title="Round One" subtitle="General Knowledge" js 1:8
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
+3) How many kings of England have been called Philip?
+4) What year was the first ever iPhone released?
+5) Where is the worlds most populated country?
+6) True or false - there are more bacteria cells in the your body that human cells?
+7) What name is the rapper Sean Combs known by?
+8) In what year was the first episode of South Park aired?
 ```
 
 </CodeSurfer>
 
 ---
 
-<CodeSurferColumns themes={[vsDark, github]}>
 
-<Step>
+```js title="Round One - Answers" subtitle="General Knowledge"
+1) What does BMW stand for (in English)? - Bavarian Motor Works
+2) What city was said to be formed by Romulus and Remus? - Rome
+3) How many kings of England have been called Philip? - None
+4) What year was the first ever iPhone released? - 2007
+5) Where is the worlds most populated country? - China
+6) True or false - there are more bacteria cells in the your body that human cells? - True 10x as many
+7) What name is the rapper Sean Combs known by? P-Diddy
+8) In what year was the first episode of South Park aired? 1997
 
-```js
-const magna = aliqua => aliqua.ut((enim, ad) => enim, 0);
+
 ```
+---
 
-```js
-const minim = (ad, enim) => dolore.magna(ad / enim);
+
+```js title="Round Two - Answers" subtitle="Science"
+1) Borborygmus is the medical term for what bodily function or condition? - Stomach Rumbling
+2) What is the chemical symbol for Pottasium? - K
+3) What planet has the most gravity? - Jupiter
+4) What is the human bodies largest organ? - Skin
+5) Human babies are born without a bone that us adults have - what one is missing? The knee cap
+6) What is the collective name for a group of frogs? An army
+7) What was the Manhattan Project? The development of the atomic bomb
+8) Known as the 'father of genetics' this Austrian Monk discovered the basic principles of hereditary? What was his name? - Gregor Mendel
 ```
+---
 
-</Step>
+```js title="Round Three" subtitle="Sport"
+1) In which year did Maradona score a goal with his hand?	1986
+2) How matches did Mohammed Ali lose in his career?	One
+3) Moving anticlockwise on a dartboard - what is the number next to 4? 18
+4) Which cyclist was also called the cannibal? Eddy Merckx
+5) What was the Olympic city of 1992 ? Barcelona
+6) How many hurdles are there in the men's 110 metres hurdles athletics event? 10
+7) Which English football club won the first ever Football League in 1888? Preston North End
+8) Which team, we need the sport and country, have a group of players called "the bomb squad"? - South African Rugby Union Team
 
-<Step>
-
-```js
-const lorem = (ipsum, dolor, sit) => {
-  const amet = dolor - ipsum;
-  return consectetur.adipiscing(
-    {
-      elit: sed.eiusmod(sit - dolor) / amet + 2,
-    },
-    (tempor, incididunt) => ipsum + amet * incididunt
-  );
-};
-
-const magna = aliqua => aliqua.ut((enim, ad) => enim, 0);
 ```
+---
 
-```js
-const minim = (ad, enim) => dolore.magna(ad / enim);
-
-const sed = (eiusmod, tempor, incididunt) => {
-  const ut = tempor - eiusmod;
-  return labore.et(
-    {
-      amet: dolore.magna(incididunt - tempor) / ut + 2,
-    },
-    (aliqua, elit) => eiusmod + ut * elit
-  );
-};
+```js title="Round Four - Answers" subtitle="Name the film"
+1) From 1986 starring Matthew Broderick - “Life moves pretty fast. If you don’t stop and look around once in a while, you could miss it.
+Ferris Bueller’s Day Off
+2) 1995 film starring Mel Gibson - “Every man dies, not every man really lives.”
+Braveheart
+3) 2008 film starring Chritian Bale - “I believe whatever doesn’t kill you, simply makes you…stranger.”
+The Dark Knight
+4) 1998 film starring Robin Williams - “Carpe diem. Seize the day, boys. Make your lives extraordinary.”
+Dead Poets Society
+5) 2012 film starring Stanley Tucci - “Hope. It is the only thing stronger than fear. A little hope is effective. A lot of hope is dangerous. A spark is fine, as long as it’s contained.”
+The Hunger Games
+6)1959 film starring Marilyn Monroe - “Nobody’s perfect.”
+Some Like It Hot
+7) 2006 film starring Hugh Jackman - “Now you’re looking for the secret, but you won’t find it, because of course you’re not really looking. You don’t really want to know. You want to be fooled.”
+The Prestige
+8) 1988 film starring John Cleese - “To call you stupid would be an insult to stupid people!”
+A Fish Called Wanda 
+ 
 ```
-
-</Step>
-
-</CodeSurferColumns>
-
 ---
 
 docs:  
