--- a/deck.mdx
+++ b/deck.mdx
@@ -3,9 +3,10 @@ import {
   CodeSurferColumns,
   Step,
 } from "code-surfer";
-import { github, vsDark } from "@code-surfer/themes";
+import customTheme from "./custom-theme"
 
-export const theme = vsDark;
+
+export const theme = customTheme;
 
 # Welcome to the MckGeewells Quarantine Quiz 👋
 
@@ -43,23 +44,14 @@ export const theme = vsDark;
 5) Where is the worlds most populated country?
 ```
 
-```js title="Round One" subtitle="General Knowledge" js 6:6
+```js title="Round One" subtitle="General Knowledge" js 6:7
 1) What does BMW stand for (in English)?
 2) What city was said to be formed by Romulus and Remus?
 3) How many kings of England have been called Philip?
 4) What year was the first ever iPhone released?
 5) Where is the worlds most populated country?
-6) True or false - there are more bacteria cells in the your body that human cells?
-```
-
-```js title="Round One" subtitle="General Knowledge" js 7:7
-1) What does BMW stand for (in English)?
-2) What city was said to be formed by Romulus and Remus?
-3) How many kings of England have been called Philip?
-4) What year was the first ever iPhone released?
-5) Where is the worlds most populated country?
-6) True or false - there are more bacteria cells in the your body that human cells?
-7) What name is the rapper Sean Combs known by?
+6) True or false - there are more bacteria cells 
+in the your body that human cells?
 ```
 
 ```js title="Round One" subtitle="General Knowledge" js 8:8
@@ -68,18 +60,31 @@ export const theme = vsDark;
 3) How many kings of England have been called Philip?
 4) What year was the first ever iPhone released?
 5) Where is the worlds most populated country?
-6) True or false - there are more bacteria cells in the your body that human cells?
+6) True or false - there are more bacteria cells 
+in the your body that human cells?
 7) What name is the rapper Sean Combs known by?
-8) In what year was the first episode of South Park aired?
 ```
 
-```js title="Round One" subtitle="General Knowledge" js 1:8
+```js title="Round One" subtitle="General Knowledge" js 9:9
 1) What does BMW stand for (in English)?
 2) What city was said to be formed by Romulus and Remus?
 3) How many kings of England have been called Philip?
 4) What year was the first ever iPhone released?
 5) Where is the worlds most populated country?
-6) True or false - there are more bacteria cells in the your body that human cells?
+6) True or false - there are more bacteria cells 
+in the your body that human cells?
+7) What name is the rapper Sean Combs known by?
+8) In what year was the first episode of South Park aired?
+```
+
+```js title="Round One" subtitle="General Knowledge" js 1:9
+1) What does BMW stand for (in English)?
+2) What city was said to be formed by Romulus and Remus?
+3) How many kings of England have been called Philip?
+4) What year was the first ever iPhone released?
+5) Where is the worlds most populated country?
+6) True or false - there are more bacteria cells 
+in the your body that human cells?
 7) What name is the rapper Sean Combs known by?
 8) In what year was the first episode of South Park aired?
 ```
@@ -121,25 +126,15 @@ export const theme = vsDark;
 
 ```
 
-```js title="Round One - Answers" subtitle="General Knowledge" js 6:7
+```js title="Round One - Answers" subtitle="General Knowledge" js 6:8
 1) What does BMW stand for (in English)? - Bavarian Motor Works
 2) What city was said to be formed by Romulus and Remus? - Rome
 3) How many kings of England have been called Philip? - None
 4) What year was the first ever iPhone released? - 2007
 5) Where is the worlds most populated country? - China
-6) True or false - there are more bacteria cells in the your body that human cells?
+6) True or false - there are more bacteria cells 
+in the your body that human cells?
 True - 10x more
-```
-
-```js title="Round One - Answers" subtitle="General Knowledge" js 8:8
-1) What does BMW stand for (in English)? - Bavarian Motor Works
-2) What city was said to be formed by Romulus and Remus? - Rome
-3) How many kings of England have been called Philip? - None
-4) What year was the first ever iPhone released? - 2007
-5) Where is the worlds most populated country? - China
-6) True or false - there are more bacteria cells in the your body that human cells?
-True - 10x more
-7) What name is the rapper Sean Combs known by? P Diddy
 ```
 
 ```js title="Round One - Answers" subtitle="General Knowledge" js 9:9
@@ -148,19 +143,33 @@ True - 10x more
 3) How many kings of England have been called Philip? - None
 4) What year was the first ever iPhone released? - 2007
 5) Where is the worlds most populated country? - China
-6) True or false - there are more bacteria cells in the your body that human cells?
+6) True or false - there are more bacteria cells 
+in the your body that human cells?
 True - 10x more
 7) What name is the rapper Sean Combs known by? P Diddy
-8) In what year was the first episode of South Park aired? 1997
 ```
 
-```js title="Round One - Answers" subtitle="General Knowledge" js 1:9
+```js title="Round One - Answers" subtitle="General Knowledge" js 10:10
 1) What does BMW stand for (in English)? - Bavarian Motor Works
 2) What city was said to be formed by Romulus and Remus? - Rome
 3) How many kings of England have been called Philip? - None
 4) What year was the first ever iPhone released? - 2007
 5) Where is the worlds most populated country? - China
-6) True or false - there are more bacteria cells in the your body that human cells?
+6) True or false - there are more bacteria cells 
+in the your body that human cells?
+True - 10x more
+7) What name is the rapper Sean Combs known by? P Diddy
+8) In what year was the first episode of South Park aired? 1997
+```
+
+```js title="Round One - Answers" subtitle="General Knowledge" js 1:10
+1) What does BMW stand for (in English)? - Bavarian Motor Works
+2) What city was said to be formed by Romulus and Remus? - Rome
+3) How many kings of England have been called Philip? - None
+4) What year was the first ever iPhone released? - 2007
+5) Where is the worlds most populated country? - China
+6) True or false - there are more bacteria cells 
+in the your body that human cells?
 True - 10x more
 7) What name is the rapper Sean Combs known by? P Diddy
 8) In what year was the first episode of South Park aired? 1997
@@ -220,7 +229,7 @@ True - 10x more
 7) What was the Manhattan Project?
 ```
 
-```js title="Round Two" subtitle="Science" js 8:9
+```js title="Round Two" subtitle="Science" js 8:10
 1) Borborygmus is the medical term for what bodily function or condition?
 2) What is the chemical symbol for Pottasium?
 3) What planet has the most gravity?
@@ -228,11 +237,12 @@ True - 10x more
 5) Human babies are born without a bone that us adults have - what one is missing?
 6) What is the collective name for a group of frogs?
 7) What was the Manhattan Project?
-8) Known as the 'father of genetics' this Austrian Monk discovered the basic principles of hereditary? 
+8) Known as the 'father of genetics' this Austrian Monk 
+discovered the basic principles of hereditary? 
 What was his name?
 ```
 
-```js title="Round Two" subtitle="Science" js 1:9
+```js title="Round Two" subtitle="Science" js 1:10
 1) Borborygmus is the medical term for what bodily function or condition?
 2) What is the chemical symbol for Pottasium?
 3) What planet has the most gravity?
@@ -240,7 +250,8 @@ What was his name?
 5) Human babies are born without a bone that us adults have - what one is missing?
 6) What is the collective name for a group of frogs?
 7) What was the Manhattan Project?
-8) Known as the 'father of genetics' this Austrian Monk discovered the basic principles of hereditary? 
+8) Known as the 'father of genetics' this Austrian Monk 
+discovered the basic principles of hereditary? 
 What was his name?
 ```
 
@@ -299,7 +310,7 @@ What was his name?
 7) What was the Manhattan Project? - The development of the atomic bomb
 ```
 
-```js title="Round Two - Answers" subtitle="Science" js 8:9
+```js title="Round Two - Answers" subtitle="Science" js 8:10
 1) Borborygmus is the medical term for what bodily function or condition? - Stomach Rumbling
 2) What is the chemical symbol for Pottasium? - K
 3) What planet has the most gravity? - Jupiter
@@ -307,11 +318,12 @@ What was his name?
 5) Human babies are born without a bone that us adults have - what one is missing? - The knee cap
 6) What is the collective name for a group of frogs? - An army
 7) What was the Manhattan Project? - The development of the atomic bomb
-8) Known as the 'father of genetics' this Austrian Monk discovered the basic principles of hereditary? 
+8) Known as the 'father of genetics' this Austrian Monk 
+discovered the basic principles of hereditary? 
 What was his name? - Gregor Mendel
 ```
 
-```js title="Round Two - Answers" subtitle="Science" js 1:9
+```js title="Round Two - Answers" subtitle="Science" js 1:10
 1) Borborygmus is the medical term for what bodily function or condition? - Stomach Rumbling
 2) What is the chemical symbol for Pottasium? - K
 3) What planet has the most gravity? - Jupiter
@@ -319,7 +331,8 @@ What was his name? - Gregor Mendel
 5) Human babies are born without a bone that us adults have - what one is missing? - The knee cap
 6) What is the collective name for a group of frogs? - An army
 7) What was the Manhattan Project? - The development of the atomic bomb
-8) Known as the 'father of genetics' this Austrian Monk discovered the basic principles of hereditary? 
+8) Known as the 'father of genetics' this Austrian Monk 
+discovered the basic principles of hereditary? 
 What was his name? - Gregor Mendel
 ```
 
